--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,11 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"    # roda todo dia à meia-noite UTC
-  workflow_dispatch:       # permite rodar manualmente
+    - cron: "0 0 * * *"  # Roda todo dia à meia-noite UTC
+  workflow_dispatch:    # Permite rodar manualmente
+
+permissions:
+  contents: write  # Libera write pro repo inteiro
 
 jobs:
   generate:
@@ -12,7 +15,15 @@ jobs:
     
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Atualizado pra v4, mais confiável
+        with:
+          fetch-depth: 0  # Pega todo histórico pra snake
+
+      - name: Create output branch if not exists
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout -b output || git checkout output
 
       - name: Generate snake
         uses: Platane/snk@v3
@@ -22,6 +33,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
             dist/github-contribution-grid-snake.gif
+            dist/github-contribution-grid-snake-dark.gif  # Adicionei mais uma variação
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
